Bug #10950 Occational 'Error in mgm protocol parser' error on mysqld startup
Submitted: 30 May 2005 4:35 Modified: 24 Aug 2005 20:20
Reporter: Stewart Smith
Status: Closed
Category:Server: Cluster Severity:S3 (Non-critical)
Version:5.0.11 OS:Linux (linux)
Assigned to: Bugs System Target Version:

[30 May 2005 4:35] Stewart Smith
Description:
Occationally, during startup of mysqld, the following message is received.

Error in mgm protocol parser. cmd: 'get config' status=1, curr=(null)
Configuration error:

How to repeat:
only occurs sometimes on mysqld startup

Suggested fix:
don't have a problem getting configuration
[14 Jun 2005 7:49] Tomas Ulin
we see this occationally from 4.1 and onwards
[17 Jun 2005 4:15] Stewart Smith
I have a hunch that this is because we're catching the mgm port still open from a previous
run (e.g. the mgm server is shutting down) and we manage to connect, but not get any
commands through (hence error in protocol).

In this case, we should retry the connection and it should work okay.

(btw, this is a hunch, not a solution, yet :)
[21 Jun 2005 3:52] Stewart Smith
A duplicate of this bug:
MySQL Bugs: #11404: mysqld process does not reconnect to cluster if MGM process moves

On mgm protocol error, we should check if we are still connected to the mgm server.
[30 Jun 2005 15:27] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/internals/26556
[17 Aug 2005 15:13] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/internals/28390
[18 Aug 2005 5:41] Stewart Smith
This does not affect 4.1 as the error message isn't there.
[20 Aug 2005 10:15] Stewart Smith
Pushed to 5.0.12
[24 Aug 2005 20:20] Mike Hillyer
Documented in 5.0.12 changelog:

<listitem><para>Wrong error message displayed when cluster management server closes port
when mysqld is connecting. (Bug #10950)</para></listitem>