BUG#10950 Occational 'Error in mgm protocol parser' error on mysqld startup

Display the (more commonly accurate) message that the mgm server closed our connection
and that we'll retry connecting to it.


ndb/src/common/transporter/TransporterRegistry.cpp:
  Fix error message in case of mgm disconnecting before we finished asking it for dynamic ports
ndb/src/mgmapi/mgmapi.cpp:
  Only display a mgm protocol error in the case of the mgm server having disconnected.
  
  Change ndb_mgm_is_connected to actually poll the socket to see if it's still open.